test/files/pos/bug1737/A.java
public interface A<T extends String> {
    T get();
}