test/files/neg/t12523/B.java
public interface B extends A {
    int bar();
}
